--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
     "eslint": "^9.16.0",
     "express": "^4.21.2",
     "globals": "^15.13.0",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "pino-pretty": "^13.0.0"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.7",
+    "pino-http": "^10.3.0"
   }
 }
