--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "dotenv": "^16.4.7",
+    "http-errors": "^2.0.0",
     "mongoose": "^8.8.4",
     "pino-http": "^10.3.0"
   }
