--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "pino-pretty": "^13.0.0"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
     "http-errors": "^2.0.0",
     "joi": "^17.13.3",
